src/scss/sections&blocks/features.scss
.features {
    background-color: #F4F4F4;
    padding-top: 94px;
    padding-bottom: 23px;
    position: relative;
    display: grid;
    grid-template-columns: minmax(406px, 40%) 53%;
    column-gap: 43px;
    justify-content: end;
    min-width: 100%;
    @media (min-width:1400px) {
        grid-template-columns: 1fr 1fr;
        justify-content: center;
        .features-sidebar {
            justify-self: center;
        }
        .features-list {
            justify-self: end;
            align-self: center;
            &__item {
                grid-template-columns: 120px 76%;
                justify-content: end;
            };
        }
    }
}

.features-list {
    padding-left: 10px;
    justify-self: start;
    &__item {
        display: grid;
        grid-template-columns: 22% 76%;
        column-gap: 19px;
        margin-bottom: 34px;
    }
    &__title {
        font-size: 16px;
        line-height: 1.3;
        color: #323232;
        margin-bottom: 16px;
    }
    &__text {
        font-size: 14px;
        line-height: 1.5;
        color: #848E97;
    }
    &__img {
        max-width: 100%;
    }
}

.features-sidebar {
    justify-self: start;
    @media (min-width:1372px) {
        justify-self: end;    
    }
    &__title {
        @include sections-title;
        font-size: calc( (100vw - 1220px)/(1380 - 1220) * (48 - 42) + 42px);
        color: $sub-general-text-color;
        text-align: left;
        padding-left: 3.4%;
        margin-bottom: 19px;
        @media (min-width:1600px) {
            font-size: 54px;
        }        
    }
    &__img {
        max-width: 700px;
        height: 89%;
        overflow: hidden;
    }      
}

@include before-large {
    .features {
        padding-top: 155px;
        padding-bottom: 0;
        grid-template-columns: 1fr;
        background-color: #fff;
        justify-content: center;
    }
    .features-list {
        justify-self: center;
        width: 94%;
        max-width: 98vw;
        &__item {
            grid-template-columns: 111px minmax(50%, 83%);
            justify-content: center;
            margin-bottom: 55px;
        }
    }
    .features-sidebar {
        justify-self: end;
        &__title {
            width: 100%;
            position: absolute;
            top: 5%;
            left: 0;            
            padding-left: 0;
            text-align: center;
            font-size: calc( (100vw - 480px)/(768 - 480) * (42 - 34) + 34px);
        }
        &__img {
            height: auto;
            width: 700px;
            max-width: 100%;
        }
    }
}

@include before-mid {
    .features {
        display: block;
        padding-top: 138px;
        padding-bottom: 6px;
    }
    .features-list {
        width: 92%;
        margin-left: auto;
        margin-right: auto;
        padding-left: 0;
        &__item {
            width: 100%;
            display: flex;
            flex-direction: column;
            justify-content: start;
            align-items: center;
        }
        &__title {
            line-height: 1;
            text-align: center;
            margin-bottom: 14px;
        }
        &__text {
            font-family: $additional-font-family;
            text-align: center;
        }
        &__img {
            margin-bottom: 23px;
        }
    }
    .features-sidebar {
        &__title {
            width: 74%;
            top: 1.4%;
            left: 50%;
            transform:translate(-50%, 0);
            font-size: 32px;
            line-height: 1.2;
        }
        &__img {
            max-width: none;
            width: 162%;
        }
    }
}

